# eos-evm

./: .gitignore  .gitmodules  README.md  build.sh  deploy.sh  publish.sh
contract/: CMakeLists.txt  README.md
contract/evm_tests/: _transactionTests.test.cpp  _vmArithmeticTest.test.cpp  _vmBitwiseLogicOperation.test.cpp  _vmBlockInfoTest.test.cpp  _vmEnvironmentalInfo.test.cpp  _vmIOandFlowOperations.test.cpp  _vmLogTest.test.cpp  _vmPushDupSwapTest.test.cpp  _vmRandomTest.test.cpp  _vmSha3Test.test.cpp  _vmSystemOperations.test.cpp  _vmTests.test.cpp  big_int.test.cpp  current.test.cpp  external_mock.hpp  hex.test.cpp  instruction.test.cpp  main.cpp  memory.test.cpp  overflow.test.cpp  pending_state.test.cpp  rlp_decode.test.cpp  rlp_encode.test.cpp  stack.test.cpp  test_utils.hpp  transaction.test.cpp  vm.test_arithmetic.cpp  vm.test_arithmetic_signed.cpp  vm.test_bitwise.cpp  vm.test_call.cpp  vm.test_code.cpp  vm.test_comparison.cpp  vm.test_control_flow.cpp  vm.test_create_contract.test.cpp  vm.test_create_contract_revert.test.cpp  vm.test_env.cpp  vm.test_gasometer.cpp  vm.test_keccak256.cpp  vm.test_log.cpp  vm.test_memory.cpp  (+7 more)
contract/include/: eos_ecrecover.hpp  eos_evm.hpp  eos_external.hpp  eos_system.hpp
contract/scripts/: build.sh  deploy.sh  publish.sh  run_all_tests.sh  run_generated_vm_tests.sh  run_test.sh
contract/src/: CMakeLists.txt  eos_evm.cpp
src/evm/: CMakeLists.txt
src/evm/src/: account_state.cpp  address.cpp  big_int.cpp  byte_reader.cpp  call.cpp  decompress_key.cpp  execute.cpp  gas_calculation.cpp  gasometer.cpp  hash.cpp  hex.cpp  instruction.cpp  jumps.cpp  rlp.cpp  (+9 more)
(+805 files in other folders)
